# texopt

./: .gitignore  CMakeLists.txt
dep/: CMakeLists.txt  dt.h  filesystem.cpp  filesystem.h  libs.cpp  miniz.h  polypartition.h  vec.h
dep/imgui/: CMakeLists.txt
dep/nfd/: CMakeLists.txt
src/: CMakeLists.txt  accessor2d.h  algo2d.h  array2d.h  atlas.cpp  atlas.h  dt2d.cpp  dt2d.h  image2d.cpp  image2d.h  mkpoly.h  mkpoly_twoband.cpp  polygon.cpp  polygon.h  recolor.cpp  stripifier.cpp  stripifier.h  texpack.cpp  textoolgui.cpp  texture.cpp  texture.h  trifill.cpp  trifill.h  util.cpp  util.h  vertexbuf.cpp  vertexbuf.h
src/textool/: CMakeLists.txt  main.cpp
